<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rb_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dark_mode"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:padding="8dp"
            android:textColor="@color/text_color"/>

        <RadioButton
            android:id="@+id/rb_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/light_mode"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:padding="8dp"
            android:textColor="@color/text_color"/>

        <RadioButton
            android:id="@+id/rb_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_mode"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:padding="8dp"
            android:textColor="@color/text_color"/>
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>